Fix overlap/positioning issue with full schedule button in desktop view

--- a/sass/_partials/_schedule.scss
+++ b/sass/_partials/_schedule.scss
@@ -44,10 +44,11 @@ $time-width: 100px;
 
     .btn {
         @include box-shadow(0 1px 8px 0 rgba(0, 0, 0, .24), 0 4px 23px 0 rgba(0, 0, 0, .19));
+        bottom: 20px;
+        padding: 8px 12px;
         position: absolute;
         right: 20px;
-        top: 100px;
-        z-index: 1;
+        z-index: 2;
     }
 
     .timetable {
@@ -343,6 +344,7 @@ $time-width: 100px;
     .btn {
         // Set button to be bigger on mobile
         @include breakpoint(mobile) {
+            bottom: initial;
             left: 50%;
             margin-left: -80px;
             padding: 15px;
