--- a/style.css
+++ b/style.css
@@ -1766,10 +1766,11 @@ body.stream #listen-now #message-the-studio {
   -moz-box-shadow: 0 1px 8px 0 rgba(0, 0, 0, 0.24), 0 4px 23px 0 rgba(0, 0, 0, 0.19);
   -webkit-box-shadow: 0 1px 8px 0 rgba(0, 0, 0, 0.24), 0 4px 23px 0 rgba(0, 0, 0, 0.19);
   box-shadow: 0 1px 8px 0 rgba(0, 0, 0, 0.24), 0 4px 23px 0 rgba(0, 0, 0, 0.19);
+  bottom: 20px;
+  padding: 8px 12px;
   position: absolute;
   right: 20px;
-  top: 100px;
-  z-index: 1;
+  z-index: 2;
 }
 .schedule .timetable {
   background: rgba(0, 0, 0, 0.1);
@@ -2020,6 +2021,7 @@ body.stream #listen-now #message-the-studio {
 }
 @media (max-width: 620px) {
   .mini-schedule .btn {
+    bottom: initial;
     left: 50%;
     margin-left: -80px;
     padding: 15px;
